# openglunderqml

./: CMakeLists.txt  app.qml  main.cpp  main.qml  main2.qml  squircle.cpp
